[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-monitor"
version = "0.1.0"
description = "A real-time terminal dashboard for monitoring SLURM cluster jobs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dongwoo Kim", email = "dongwookim.ml@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=10.0.0",
]

[project.scripts]
slurm-monitor = "slurm_monitor:main"

[project.urls]
Homepage = "https://github.com/dongwookim-ml/slurm-monitor"
Repository = "https://github.com/dongwookim-ml/slurm-monitor"
Issues = "https://github.com/dongwookim-ml/slurm-monitor/issues"
